# GetPocket-API

./: .env.example  .gitignore  README.md  app.py  authorizer.py  pyproject.toml  setup.sh
modules/: prompts.py.example  scraper.py  summarizer.py  tagging.py.example
